--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,8 +9,8 @@
 
       <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
       <ul class="nav navbar navbar-nav">
-        <li><a href="#">Recipes</a></li>
-        <li><a href="#">Shopping lists</a></li>
+        <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
+        <li><a href="#"  (click)="onSelect('shopping')">Shopping lists</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
