--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,8 +1,14 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list
+    (selectedRecipe)="RecipeChosen = $event"></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail
+    *ngIf="RecipeChosen; else infoText"
+    [recipe]="RecipeChosen"></app-recipe-detail>
+    <ng-template #infoText>
+     <p> Please select a Recipe!</p>
+    </ng-template>
   </div>
 </div>
