--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,12 +1,9 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list
-    (selectedRecipe)="RecipeChosen = $event"></app-recipe-list>
+    <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail
-    *ngIf="RecipeChosen; else infoText"
-    [recipe]="RecipeChosen"></app-recipe-detail>
+    <router-outlet></router-outlet>
     <ng-template #infoText>
      <p> Please select a Recipe!</p>
     </ng-template>
