--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,15 +9,15 @@
 
       <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
       <ul class="nav navbar navbar-nav">
-        <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
-        <li><a href="#"  (click)="onSelect('shopping')">Shopping lists</a></li>
+        <li><a routerLink="/recipes" routerLinkActive="active">Recipes</a></li>
+        <li><a routerLink="/shopping-list" routerLinkActive="active">Shopping lists</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+        <li class="dropdown" appDropdown>
+          <a   class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
-              <li><a href="#">Fetch data</a></li>
-              <li><a href="#">Put Data</a></li>
+              <li><a >Fetch data</a></li>
+              <li><a >Put Data</a></li>
           </ul>
         </li>
         </ul>
