--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -12,28 +12,34 @@
 </div>
   <div class="row">
       <div class="col-xs-12">
-        <div class="btn-group">
+        <div class="btn-group " appDropdown>
           <button
           type="button"
           class="btn btn-primary dropdown-toggle">
             Manage Recipe <span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
-            <li><a href="#">To Shopping List</a></li>
-            <li><a href="#">Edit Recipe</a></li>
-            <li><a href="#">Delete Recipe</a></li>
+            <li><a (click)="onAddToShoppingList()" style="cursor:pointer">To Shopping List</a></li>
+            <li><a (click)="onEditRecipe()">Edit Recipe</a></li>
+            <li><a>Delete Recipe</a></li>
           </ul>
         </div>
       </div>
   </div>
   <div class="row">
       <div class="col-xs-12">
-        Description
+        {{ recipe.description }}
       </div>
   </div>
   <div class="row">
       <div class="col-xs-12">
-        Ingredients
+        <ul>
+          <li
+          classs="list-group-item"
+        *ngFor="let ingredient of recipe.ingredient">
+          {{ ingredient.name }} - {{ ingredient.amount }}
+      </li>
+        </ul>
       </div>
   </div>
 
