--- a/src/app/recipe/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,68 @@
-<p>recipe-edit works!</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+        <div class="row">
+            <div class="col-xs-12">
+              <button type="submit" [disabled]="!recipeForm.valid" class="btn btn-success">Save</button>
+              <button type="button" class="btn btn-danger">Cancel</button>
+            </div>
+          </div>
+          <div class="row">
+              <div class="col-xs-12">
+                <div class="form-group">
+                  <label for="name">Name</label>
+                  <input type="text" id="name"
+                  formControlName="name" class="form-control">
+                </div>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-xs-12">
+                <div class="form-group">
+                  <label for="imagePath">Image</label>
+                  <input type="text" id="imagePath"
+                  formControlName="imagePath" class="form-control">
+                </div>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-xs-12">
+                <img src="" class="img-responsive" />
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-xs-12">
+                <div class="form-group">
+                  <label for="description">Description</label>
+                  <textarea id="description" class="form-control"
+                  formControlName="description" rows="6"></textarea>
+                </div>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-xs-12" formArrayName="ingredients">
+                  <div class="row" style="margin-top:10px"
+                  *ngFor="let ingredientCtrl of getControls();let i = index"
+                  [formGroupName]="i">
+                      <div class="col-xs-8">
+                          <input type="text" class="form-control" formControlName="name">
+                      </div>
+                      <div class="col-xs-2">
+                          <input type="number" class="form-control" formControlName="amount">
+                      </div>
+                      <div class="col-xs-2">
+                          <button class="btn btn-danger" type="button">X</button>
+                      </div>
+                  </div>
+                  <hr>
+                  <div class="col-xs-12">
+                      <button class="btn btn-success" (click)="onAddIngredient()" type="button">Add Ingredient</button>
+                  </div>
+              </div>
+          </div>
+    </form>
+  </div>
+</div>
+
+
+
