--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,29 +1,32 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onAddItem(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
           <input type="text" id="name" class="form-control"
-          #nameInput/>
+           name="name"
+           ngModel
+           required/>
         </div>
-
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
           <input type="number" id="amount" class="form-control"
-          #amountInput/>
+          name="amount"
+           ngModel
+           required
+           pattern="^[1-9]+[0-9]*$"/>
         </div>
       </div>
-
       <div class="row">
           <div class="col-sm-12">
-            <button  style="margin:5px;" class="btn btn-success" type="button" (click)=onAdded()>Add</button>
-            <button  style="margin:5px;" class="btn btn-danger" type="submit">Delete</button>
-            <button  style="margin:5px;" class="btn btn-primary" type="submit">Clear</button>
+            <button  style="margin:5px;" class="btn btn-success" type="submit"
+            [disabled]="!f.valid">{{ editMode? 'Update':'Add'}}</button>
+            <button *ngIf="editMode" style="margin:5px;" class="btn btn-danger" (click)="onDelete()" type="button">Delete</button>
+            <button  style="margin:5px;" class="btn btn-primary" (click)="onClear()" type="button">Clear</button>
           </div>
       </div>
     </form>
   </div>
-
 </div>
 
